--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="shortcut icon"
-      href="https://fullthrottlelabs.com/img/logo/logo-2.png"
+      href="https://fullthrottlelabs.com/favicon-16x16.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
